--- a/app/assets/stylesheets/components/_card-account.scss
+++ b/app/assets/stylesheets/components/_card-account.scss
@@ -15,7 +15,8 @@
 }
 
 .card-account {
-  background: linear-gradient(180deg, rgba(195, 153, 242, 0.82) 0%, rgba(217, 217, 217, 0.15) 100%);  margin: 20px;
+  background: linear-gradient(180deg, rgba(217, 217, 217, 0.15) 0%, rgba(176, 244, 81, 0.82) 100%);
+  margin: 20px;
   justify-content: space-between;
   align-items: center;
   height: 150px;
@@ -47,7 +48,28 @@
 }
 
 .balance {
-  background: linear-gradient(rgba(248, 248, 248, 0.8) 0%, rgba(119, 131, 144, 0.291257) 52.14%);
+  background: linear-gradient(180deg, rgba(31, 31, 30, 0.82) 0%, rgba(217, 217, 217, 0.15) 100%);
+  width: 300px;
+  margin: 50px;
+  padding: 20px;
+}
+
+#incomes {
+  background: linear-gradient(180deg, rgba(244, 237, 81, 0.82) 0%, rgba(217, 217, 217, 0.15) 100%);
+  width: 300px;
+  margin: 50px;
+  padding: 20px;
+}
+
+#expenses{
+  background: linear-gradient(180deg, rgba(244, 81, 81, 0.82) 0%, rgba(217, 217, 217, 0.15) 100%);
+  width: 300px;
+  margin: 50px;
+  padding: 20px;
+}
+
+#available{
+  background: linear-gradient(180deg, rgba(217, 217, 217, 0.15) 0%, rgba(176, 244, 81, 0.82) 100%);
   width: 300px;
   margin: 50px;
   padding: 20px;
