--- a/app/assets/stylesheets/components/_dashboard.scss
+++ b/app/assets/stylesheets/components/_dashboard.scss
@@ -2,6 +2,10 @@
   margin: 30px 20px 20px 30px;
   padding-left: 31px;
 }
+.dashboard-subtitle{
+  margin: 30px 20px 20px 30px;
+  padding-left: 31px;
+}
 
 .chart {
   background-color: $blue;
@@ -144,4 +148,3 @@
   margin-right: 5%;
   margin-left: 5%;
 }
-
