--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -14,9 +14,18 @@
           <tr>
             <td><%= category.name %></td>
             <td><%= category.category_type %></td>
-            <td><%= link_to "Edit", edit_category_path(category) %> or <%= link_to "Delete", category_path(category), data: { turbo_method: :delete } %></td>
+            <td><%= link_to edit_category_path(category) do %>
+              <i class="fa-solid fa-pen-to-square text-light"></i>
+            <% end %>
+             | <%= link_to category_path(category), data: { turbo_method: :delete, turbo_confirm: "Are you sure?" } do %>
+              <i class="fa-solid fa-trash text-light"></i>
+             <% end %>
+             </td>
           </tr>
         <% end %>
+         <%= link_to new_account_path do %>
+      <i class="fa-solid fa-circle-plus fa-3x" ></i>
+    <% end %>
       </tbody>
     </table>
     <div class="row justify-content-center p-1">
