--- a/app/assets/stylesheets/components/_table.scss
+++ b/app/assets/stylesheets/components/_table.scss
@@ -19,6 +19,7 @@
  .transactions-table thead {
   background-color: $blue;
   border-radius: 10px;
+  font-weight: bolder;
   // border-collapse: collapse !important;
 }
 
@@ -27,20 +28,6 @@
   text-align: center;
 }
 
-.transactions-table a {
-  text-decoration: none;
-  color: white;
-}
-
-.transactions-table a:hover {
-  text-decoration: none;
-  color: white;
-}
-
-.transactions-table a:visited {
-  text-decoration: none;
-  color: white;
-}
 
 //  th{
 //   background-color: blue;
