--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
-<div class="footer">
+<div class="footer mt-auto">
   <div class="message">
     <img src="https://cdn-icons-png.flaticon.com/512/7860/7860248.png" alt="easy to handle">
     <p>Easy to handle</p>
