--- a/app/assets/stylesheets/components/_dashboard.scss
+++ b/app/assets/stylesheets/components/_dashboard.scss
@@ -113,7 +113,7 @@
 .dashboard-info {
   margin: 50px;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: 3fr 1fr;
   grid-template-rows: 1fr;
   grid-gap: 40px;
 }
@@ -138,10 +138,6 @@
 
 .content-chart-select {
   background: #7F8A96;
-}
-
-.chars-container {
-
 }
 
 .chart-element {
