--- a/app/views/shared/_charts.html.erb
+++ b/app/views/shared/_charts.html.erb
@@ -19,6 +19,6 @@
     <%= column_chart current_user.transactions.group_by_day(:date, last: 7, format: "%a").sum(:amount),  library: { backgroundColor: "#2D4054", dataset: {borderWidth: 10, fillColor: "#ffffff"}, vAxis: { baselineColor: "#ffffff", gridlines: {Color: "" }, textStyle: { color: "#ffffff"}, titleTextStyle: {color: "#ffffff"} }, hAxis: { baselineColor: "#ffffff" , gridlines: {Color: "" }, textStyle: { color: "#ffffff"} , titleTextStyle: {color: "#ffffff"} } }  %>
   </div>
   <div id="last-month">
-    <%= line_chart current_user.transactions.group(:account_id).group_by_day(:date, last: 30).sum(:amount), library: { backgroundColor: "#2D4054", dataset: {borderWidth: 10, fillColor: "#ffffff"}, vAxis: { baselineColor: "#ffffff", gridlines: {Color: "" }, textStyle: { color: "#ffffff"}, titleTextStyle: {color: "#ffffff"} }, hAxis: { baselineColor: "#ffffff" , gridlines: {Color: "" }, textStyle: { color: "#ffffff"} , titleTextStyle: {color: "#ffffff"} }, legend: { textStyle: { color: '#ffffff' } } }  %>
+    <%= line_chart current_user.transactions.joins(:account).group(:name).group_by_day(:date, last: 30).sum(:amount), library: { backgroundColor: "#2D4054", dataset: {borderWidth: 10, fillColor: "#ffffff"}, vAxis: { baselineColor: "#ffffff", gridlines: {Color: "" }, textStyle: { color: "#ffffff"}, titleTextStyle: {color: "#ffffff"} }, hAxis: { baselineColor: "#ffffff" , gridlines: {Color: "" }, textStyle: { color: "#ffffff"} , titleTextStyle: {color: "#ffffff"} }, legend: { textStyle: { color: '#ffffff' } } }  %>
   </div>
 </div>
