--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -18,7 +18,7 @@
               <td><%= link_to edit_category_path(category) do %>
                 <i class="fa-solid fa-pen-to-square text-light"></i>
               <% end %>
-              | <%= link_to category_path(category), data: { turbo_method: :delete, turbo_confirm: "Are you sure?" } do %>
+               <%= link_to category_path(category), data: { turbo_method: :delete, turbo_confirm: "Are you sure?" } do %>
                 <i class="fa-solid fa-trash text-light"></i>
               <% end %>
               </td>
