--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -2,10 +2,12 @@
   <div class="row justify-content-center p-5">
     <h1 class="mb-5">Your Transactions</h1>
       <div class="search-container">
-      <%= form_with url: transactions_path, remote: true, method: :get do  %>
-        <%= text_field_tag :query, params[:query] %>
-        <%= submit_tag "submit" %>
-      <% end %>
+        <%= form_with url: transactions_path, remote: true, method: :get do  %>
+          <%= text_field_tag :query, params[:query], placeholder: "Search", class: "input-search"%>
+          <%= button_tag(type: "submit", class: "btn my-0 my-sm-0 mr-sm-2 btn-search") do %>
+            <i class="fas fa-search text-light"></i>
+          <% end %>
+        <% end %>
       </div>
     <table>
       <thead>
